--- a/app/src/main/res/layout/fragment_view_company.xml
+++ b/app/src/main/res/layout/fragment_view_company.xml
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4"
+            android:weightSum="5"
             android:background="@color/secondaryBackground"
             android:layout_marginHorizontal="20dp"
             app:layout_constraintTop_toBottomOf="@id/cancel"
@@ -99,7 +99,7 @@
                 android:id="@+id/stayHistory"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/secondary"
+                android:textColor="@color/lightBlack"
                 android:text="Stay History"
                 android:textAlignment="center"
                 android:background="@drawable/corner_top_grey_background"
@@ -116,8 +116,25 @@
                 android:id="@+id/companyLedger"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/secondary"
+                android:textColor="@color/lightBlack"
                 android:text="Company Ledger"
+                android:textAlignment="center"
+                android:background="@drawable/corner_top_grey_background"
+                android:layout_weight="1"
+                android:textSize="@dimen/H5"
+                android:paddingVertical="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/roboto"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/ratePlan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/lightBlack"
+                android:text="Rate Plan"
                 android:textAlignment="center"
                 android:background="@drawable/corner_top_grey_background"
                 android:layout_weight="1"
