--- a/app/src/main/res/layout/fragment_lost_found.xml
+++ b/app/src/main/res/layout/fragment_lost_found.xml
@@ -49,7 +49,33 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/insertTransactionBtn"
+            android:id="@+id/insertFoundBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:clickable="true"
+            android:backgroundTint="@color/black"
+            app:cardCornerRadius="10dp"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="@id/heading"
+            app:layout_constraintTop_toTopOf="@id/heading"
+            app:layout_constraintEnd_toStartOf="@id/insertLostBtn">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Found Item"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H5"
+                android:layout_marginHorizontal="20dp"
+                android:textColor="@color/white"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/insertLostBtn"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
@@ -65,7 +91,7 @@
                 android:id="@+id/buttonTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add New Item"
+                android:text="Add Lost Item"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 android:fontFamily="@font/roboto_bold"
